--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,7 +7,8 @@
 # documentation.
 
 name: Java CI with Maven
-
+env:
+  TOKEN: ${{ secrets.PAT_TOKEN }}
 on:
   push:
     branches: [ "main" ]
@@ -16,6 +17,7 @@ on:
 permissions:
   contents: read
   security-events: write
+
 jobs:
   build:
 
